--- a/Lab36WebApi/UnitTests/UnitTests.csproj
+++ b/Lab36WebApi/UnitTests/UnitTests.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lab36WebApi\Lab36WebApi.csproj" />
+  </ItemGroup>
+
 </Project>
